
         • ‘merge_RLum()’

             • The function now removes empty list objects before
               proceeding.

         • ‘plot_AbanicoPlot()’

             • Further adjustment to deal with zero values (will now be
               removed automatically)

         • ‘plot_DRTResults()’

             • Function struggled with RLum.Results objects as input;
               corrected.

         • ‘plot_GrowthCurve()’

             • Final fitting and fitting during the MC runs is now done
               using the Levenberg-Marquardt from the package
               'minpack.lm'. This increases the fitting stability and
               the computation step markedly (#5),

             • output object is enhanced by the ‘call’ containing the
               function call,

             • for the option ‘fit.method = "LIN"’ and ‘fit.method =
               "EXP OR LIN"’ weights had been not considered;
               corrected,

             • add argument ‘fit.force_through_origin’, it does exactly
               what you may expect from such argument (#225, requested
               by Alice Versendaal),

             • get rid of some not very informative warning messages if
               some fitting failed.

         • ‘plot_RLum()’

             • The ‘...’ argument ‘main’ can be now be of type ‘list’
               if a ‘list’ of objects is provided. This allows to set
               different plot titles for this specific plot option.

         • ‘plot_RLum.Analysis()’

             • The ‘...’ argument ‘main’ can now be provided as vector
               if ‘combine = TRUE’.

         • ‘readBIN2R()’

             • Set function on deprecated, new name: ‘read_BIN2R()’

         • ‘readSPE2R()’

             • Set function on deprecated, new name: ‘read_SPE2R()’.

         • ‘readXSYG2R()’

             • Set function to deprecated, new name: ‘read_XSYG2R()’,

             • the argument ‘file’ can now handle a ‘list’ of files,