@@ -1020,11 +1020,11 @@
 </td>
 <td class=cellinside><br /> The function provides a standardised plot output for dose recovery test<br /> measurements.<br />
 </td>
-<td class=cellinside>0.1.7
+<td class=cellinside>0.1.8
 </td>
 <td class=cellinside>2015-08-30
 </td>
-<td class=cellinside>20:23:42
+<td class=cellinside>23:39:57
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France), Michael Dietze, GFZ Potsdam (Germany)<br />  R Luminescence Package Team
