@@ -1,5 +1,5 @@
 % latex table generated in R 3.2.2 by xtable 1.7-4 package
-% Sun Aug 30 20:28:29 2015
+% Sun Aug 30 23:42:06 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rlllllll}
@@ -98,7 +98,7 @@
  &  &  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   51 & plot\_AbanicoPlot & Function to create an Abanico Plot. & $<$br /$>$ A plot is produced which allows comprehensive presentation of data precision$<$br /$>$ and its dispersion around a central value as well as illustration of a$<$br /$>$ kernel density estimate, histogram and/or dot plot of the dose values.$<$br /$>$ & 0.1.2 & 2015-08-21 & 14:53:14
  & $<$br /$>$ Michael Dietze, GFZ Potsdam (Germany),  Sebastian Kreutzer,$<$br /$>$ IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)  Inspired by a plot$<$br /$>$ introduced by Galbraith \& Green (1990)$<$br /$>$  R Luminescence Package Team \\ 
-  52 & plot\_DRTResults & Visualise dose recovery test results & $<$br /$>$ The function provides a standardised plot output for dose recovery test$<$br /$>$ measurements.$<$br /$>$ & 0.1.7 & 2015-08-30 & 20:23:42
+  52 & plot\_DRTResults & Visualise dose recovery test results & $<$br /$>$ The function provides a standardised plot output for dose recovery test$<$br /$>$ measurements.$<$br /$>$ & 0.1.8 & 2015-08-30 & 23:39:57
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France), Michael Dietze, GFZ Potsdam (Germany)$<$br /$>$  R Luminescence Package Team \\ 
   53 & plot\_GrowthCurve & Fit and plot a growth curve for luminescence data (Lx/Tx against dose) & $<$br /$>$ A dose response curve is produced for luminescence measurements using a$<$br /$>$ regenerative protocol.$<$br /$>$ & 1.7.2 & 2015-08-21 & 18:08:35
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France),   Michael Dietze, GFZ Potsdam (Germany)$<$br /$>$  R Luminescence Package Team \\ 
